[project]
name = "streamlit-session-memo"
version = "0.3.1"
description = ""
authors = [{ name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }]
requires-python = ">=3.9,!=3.9.7"  # 3.9.7 is excluded due to https://github.com/streamlit/streamlit/pull/5168
readme = "README.md"
license = "MIT"
dependencies = ["streamlit>=1.0.0"]

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "streamlit>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
