[project]
name = "streamlit-session-memo"
description = ""
authors = [{ name = "Yuichiro Tachibana (Tsuchiya)", email = "t.yic.yt@gmail.com" }]
requires-python = ">=3.9,!=3.9.7"  # 3.9.7 is excluded due to https://github.com/streamlit/streamlit/pull/5168
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = ["streamlit>=1.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy[faster-cache]>=1.15.0",
    "pytest>=7.3.1,<8",
    "streamlit>=1.13.0",
    "bump-my-version>=1.1.1",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]
